--- a/app/views/account/_tasklogs.html.haml
+++ b/app/views/account/_tasklogs.html.haml
@@ -6,7 +6,7 @@
       %th= t 'site.task_name'
       - if session[:view_log] == 'admin'
         %th UID
-        %th= t 'task.owner' 
+        %th= t 'site.user' 
         %th WID
         %th= t 'task.worker'
       %th= t 'task.worker'
