--- a/public/stylesheets/compiled/site.css
+++ b/public/stylesheets/compiled/site.css
@@ -768,19 +768,24 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 
 /*Google Style Menu */
 /* line 557, ../../../app/stylesheets/site.scss */
-.gmenu {
-  font: 13px/27px Arial, sans-serif;
-  margin-left: 100px;
-  color: #3366CC;
-  height: 30px;
+body {
+  padding: 0;
+  margin: 0;
 }
 
-/* line 564, ../../../app/stylesheets/site.scss */
+/* line 561, ../../../app/stylesheets/site.scss */
+.gmenu {
+  margin-left: 100px;
+  color: #3366CC;
+  height: 25px;
+}
+
+/* line 568, ../../../app/stylesheets/site.scss */
 .gmenu a:hover {
   background-color: #e4ebf8;
 }
 
-/* line 567, ../../../app/stylesheets/site.scss */
+/* line 571, ../../../app/stylesheets/site.scss */
 .gmenu a {
   text-decoration: none;
   padding: 4px 8px 7px;
@@ -788,20 +793,20 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   outline: none;
 }
 
-/* line 573, ../../../app/stylesheets/site.scss */
+/* line 577, ../../../app/stylesheets/site.scss */
 .gmenu ul {
   list-style: none;
   margin: 0;
   padding: 0 0 0 10px;
 }
 
-/* line 578, ../../../app/stylesheets/site.scss */
+/* line 582, ../../../app/stylesheets/site.scss */
 .gmenu ul li {
   padding: 0;
   float: left;
 }
 
-/* line 583, ../../../app/stylesheets/site.scss */
+/* line 587, ../../../app/stylesheets/site.scss */
 .gmenu ul li ul li {
   padding: 0;
   float: none;
@@ -809,7 +814,7 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   width: 100%;
 }
 
-/* line 589, ../../../app/stylesheets/site.scss */
+/* line 593, ../../../app/stylesheets/site.scss */
 .gmenu ul li ul {
   position: absolute;
   border: 1px solid #C3D1EC;
@@ -819,35 +824,35 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   padding: 0px 16px 0px 0;
 }
 
-/* line 597, ../../../app/stylesheets/site.scss */
+/* line 601, ../../../app/stylesheets/site.scss */
 .gactive ul {
   display: block !important;
 }
 
-/* line 600, ../../../app/stylesheets/site.scss */
+/* line 604, ../../../app/stylesheets/site.scss */
 .gactive a {
   background-color: white;
   border: 1px solid #C3D1EC;
   border-bottom: 0;
   box-shadow: 0 -1px 5px #cccccc;
   display: block;
-  height: 29px;
+  height: 24px;
   padding: 0 8px 0 8px;
   position: relative;
   z-index: 1;
 }
 
-/* line 611, ../../../app/stylesheets/site.scss */
+/* line 615, ../../../app/stylesheets/site.scss */
 .gactive a:hover {
   background-color: white;
 }
 
-/* line 614, ../../../app/stylesheets/site.scss */
+/* line 618, ../../../app/stylesheets/site.scss */
 .gactive ul a:hover {
   background-color: #e4ebf8;
 }
 
-/* line 618, ../../../app/stylesheets/site.scss */
+/* line 622, ../../../app/stylesheets/site.scss */
 .gactive ul a {
   border: 0 !important;
   box-shadow: 0 0 0 #CCCCCC;
@@ -855,17 +860,24 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   width: 100%;
 }
 
-/* line 624, ../../../app/stylesheets/site.scss */
+/* line 628, ../../../app/stylesheets/site.scss */
 .garrow {
-  border-color: #3366CC transparent transparent;
-  border-style: solid dashed dashed;
-  margin-left: 5px;
-  position: relative;
-  top: 20px;
+  /*border-color: #3366CC transparent transparent;*/
+  /*border-style: solid dashed dashed;*/
+  /*margin-left: 5px;*/
+  /*position: relative;*/
+  /*top: 20px;*/
+  display: inline-block;
+  border: 0 solid #fff;
+  border-width: 4px 4px 0;
+  border-color: #3366cc #fff;
+  width: 0;
+  overflow: hidden;
+  height: 0;
 }
 
 /*Simple Navigator Menu*/
-/* line 633, ../../../app/stylesheets/site.scss */
+/* line 644, ../../../app/stylesheets/site.scss */
 .simple_menu {
   width: 100%;
   color: #3366CC;
@@ -873,7 +885,7 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   float: left;
 }
 
-/* line 639, ../../../app/stylesheets/site.scss */
+/* line 650, ../../../app/stylesheets/site.scss */
 .simple_menu a {
   text-decoration: none;
   padding: 4px 8px 7px;
@@ -882,12 +894,12 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   border: 1px solid #444;
 }
 
-/* line 646, ../../../app/stylesheets/site.scss */
+/* line 657, ../../../app/stylesheets/site.scss */
 .simple_menu a:hover {
   background-color: #e4ebf8;
 }
 
-/* line 649, ../../../app/stylesheets/site.scss */
+/* line 660, ../../../app/stylesheets/site.scss */
 .simple_menu a {
   border: 0 !important;
   box-shadow: 0 0 0 #CCCCCC;
@@ -895,25 +907,25 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   width: 100%;
 }
 
-/* line 658, ../../../app/stylesheets/site.scss */
+/* line 669, ../../../app/stylesheets/site.scss */
 .simple_menu ul {
   list-style: none;
   margin: 0;
   padding: 0 0 0 10px;
 }
 
-/* line 663, ../../../app/stylesheets/site.scss */
+/* line 674, ../../../app/stylesheets/site.scss */
 .simple_menu ul li {
   padding: 0;
   float: left;
 }
 
-/* line 667, ../../../app/stylesheets/site.scss */
+/* line 678, ../../../app/stylesheets/site.scss */
 #navi {
   margin-left: 100px;
 }
 
-/* line 670, ../../../app/stylesheets/site.scss */
+/* line 681, ../../../app/stylesheets/site.scss */
 #account_bar {
   float: right;
 }
