display user realname when post issues, modify to hide. fixed some i18n date display bugs

--- a/app/views/issues/_form.html.haml
+++ b/app/views/issues/_form.html.haml
@@ -7,7 +7,8 @@
     = @task.user.username
     |
     = label_tag t('task.worker')
-    = @task.worker.username
+    =# @task.worker.username
+    = @task.worker_part_name
     |
     = label_tag t('global.price')
     = @task.price
