--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -19,7 +19,7 @@
 // But Compass recommends that you scope your blueprint styles
 // So that you can better control what pages use blueprint
 // when stylesheets are concatenated together.
-@include blueprint-scaffolding("body.bp");
+//@include blueprint-scaffolding("body.bp");
 
 @import "site";
 
