--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head 
     %title= t 'site.name' 
     = favicon_link_tag
-    = javascript_include_tag :defaults
+    =# javascript_include_tag :defaults
     = csrf_meta_tag
     = javascript_include_tag 'jquery.min.js'
 
@@ -23,8 +23,8 @@
 
     = javascript_include_tag 'site'
 
-    = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
-    = stylesheet_link_tag 'compiled/print.css', :media => 'print'
+    =# stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
+    =# stylesheet_link_tag 'compiled/print.css', :media => 'print'
     /[if IE]
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
 
