--- a/app/views/account/_user.html.haml
+++ b/app/views/account/_user.html.haml
@@ -13,7 +13,8 @@
     = @user.email
   %p
     %b= t 'account.role'
-    = @user.role_objects.map { |role| role.name }.join('/')
+    =# @user.role_objects.map { |role| role.name }.join('/')
+    = @user.roles.map { |role| role.name }.join('/')
   %p
     %b= t 'account.level'
     = image_tag "icon_vip#{(@user.level)}.gif"
