--- a/app/views/account/index.html.haml
+++ b/app/views/account/index.html.haml
@@ -1,7 +1,9 @@
-= render 'users/head'
+.container-fluid
+  .row-fluid
+    .span2
+      = render 'users/head'
 
-#wide
-  .solidshape
-    = render 'user' unless @user.nil?
-
-  = render 'trades'
+    .span10
+      = render 'user' unless @user.nil?
+      %hr
+      = render 'trades'
