--- a/app/views/board/tasklogs.html.haml
+++ b/app/views/board/tasklogs.html.haml
@@ -16,8 +16,9 @@
       }
     });
   });
-- form_tag :controller => 'board', :action => 'search_task_log' do
-  .solidshape
+
+.container
+  = form_tag({:controller => 'board', :action => 'search_task_log'}, {:class=>'well form-inline'}) do
     = t 'global.from'
     = text_field_tag 'from', session[:from], {:size=>10, :class => 'validate[required]'}
     = t 'global.to'
@@ -25,6 +26,6 @@
     = label_tag t 'site.login_name'
     = search_field_tag 'username', session[:username]
     = submit_tag t('global.show')
-    = link_to image_tag('save_01.png')+t('global.export'), '/t/export_tasklog'
+    = link_to image_tag('save_01.png')+t('global.export'), '/t/export_tasklog', :class=>'btn btn-info'
 
-= render 'account/tasklogs'
+  = render 'account/tasklogs'
