--- a/app/views/issues/_issues.html.haml
+++ b/app/views/issues/_issues.html.haml
@@ -1,16 +1,14 @@
-#wide
-  %table
-    %caption
-      /= t 'site.issue'
-    %thead
-      %tr
-        %th= t 'global.title'
-        %th= t 'global.status'
-        %th= t 'site.login_name'
-        %th= t 'global.type'
-        %th= t 'manage.service'
-        %th= t 'global.created_at'
-        %th
+%table.table.table-striped
+  %thead
+    %tr
+      %th= t 'global.title'
+      %th= t 'global.status'
+      %th= t 'site.login_name'
+      %th= t 'global.type'
+      %th= t 'manage.service'
+      %th= t 'global.created_at'
+      %th
+  %tbody
     - @issues.each do |issue|
       %tr{:class=>'double'}
         %td= issue.title
@@ -33,7 +31,5 @@
         %td{:colspan=>8}
           #task_detail
             = issue.content.length > 30 ? issue.content[0,30]+'...' : issue.content
-    %tfoot
-      %tr
-        %th{:colspan=>8}
-          = will_paginate @issues
+
+  = will_paginate @issues
