--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -214,7 +214,8 @@
                 %li
                   = link_to t('site.roles'), '/t/roles'
 
-    = yield
+    .container-fluid
+      = yield
 
     .container
       %hr
