--- a/app/views/account/task_log.haml
+++ b/app/views/account/task_log.haml
@@ -1,14 +1,18 @@
-= render 'users/head'
+.container-fluid
+  .row-fluid
+    .span3
+      = render 'users/head'
 
-#wide
-  .solidshape
-    = render 'account/user'
+    .span9
+      = render 'account/user'
 
-  /
-    = t('site.user_manage')
-    - form_tag :controller => 'board', :action => 'search_user' do
-      = label_tag t 'site.login_name'
-      = search_field_tag 'username', session[:search_username]
-      = submit_tag 'Search'
+      %hr
 
-  = render 'account/tasklogs'
+      /
+        = t('site.user_manage')
+        - form_tag :controller => 'board', :action => 'search_user' do
+          = label_tag t 'site.login_name'
+          = search_field_tag 'username', session[:search_username]
+          = submit_tag 'Search'
+
+      = render 'account/tasklogs'
